# vils

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README-standalone.md  README.md  claude.md  docker-compose.yml  system_design.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_migration.py
backend/src/: __init__.py  config.py  main.py  websocket.py
backend/src/api/: auth.py  builds.py  monitoring.py  projects.py  schemas.py  tasks.py
backend/src/auth/: __init__.py  dependencies.py  encryption.py  security.py
backend/src/core/: celery_app.py  logging.py  metrics.py  redis.py
backend/src/database/: base.py  connection.py
backend/src/integrations/: __init__.py  build_services.py
backend/src/models/: __init__.py  build.py  project.py  service.py  task.py  user.py
backend/src/services/: binary_search.py  build_tasks.py  git_tasks.py  notification_tasks.py
docs/: api.md  deployment.md
frontend/: .env.development  .env.example  Dockerfile  env.d.ts  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  test-standalone.js  test-standalone.mjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App-simple.vue  App.vue  main-debug.ts  main.ts  style.css
frontend/src/router/: index.ts
k8s/: backend.yaml  configmap.yaml  frontend.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml
scripts/: ci-cd.sh  deploy.sh  init-db.sql  local-dev.sh  optimize.sh
(+38 files in other folders)
